apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apps
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
